--- a/package.json
+++ b/package.json
@@ -9,12 +9,13 @@
     "build": "strapi build",
     "strapi": "strapi"
   },
-  "devDependencies": {},
   "dependencies": {
-    "@strapi/strapi": "4.20.3",
-    "@strapi/plugin-users-permissions": "4.20.3",
-    "@strapi/plugin-i18n": "4.20.3",
     "@strapi/plugin-cloud": "4.20.3",
+    "@strapi/plugin-i18n": "4.20.3",
+    "@strapi/plugin-users-permissions": "4.20.3",
+    "@strapi/provider-email-nodemailer": "^4.20.4",
+    "@strapi/provider-upload-cloudinary": "^4.20.4",
+    "@strapi/strapi": "4.20.3",
     "pg": "8.8.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
