--- a/package.json
+++ b/package.json
@@ -10,11 +10,12 @@
     "strapi": "strapi"
   },
   "dependencies": {
+    "@_sh/strapi-plugin-ckeditor": "^2.1.1",
     "@strapi/plugin-cloud": "4.20.3",
     "@strapi/plugin-i18n": "4.20.3",
     "@strapi/plugin-users-permissions": "4.20.3",
     "@strapi/provider-email-nodemailer": "^4.20.4",
-    "@strapi/provider-upload-cloudinary": "^4.20.4",
+    "@strapi/provider-upload-cloudinary": "^4.20.5",
     "@strapi/strapi": "4.20.3",
     "pg": "8.8.0",
     "react": "^18.0.0",
@@ -32,5 +33,8 @@
     "node": ">=18.0.0 <=20.x.x",
     "npm": ">=6.0.0"
   },
-  "license": "MIT"
+  "license": "MIT",
+  "workspaces": [
+    "./src/plugins/strapi-plugin-ckeditor"
+  ]
 }
